app/.cxx/Debug/295y3y4e/arm64-v8a/android_gradle_build_stdout_targets.txt
ninja: Entering directory `/home/ulisesten/Documents/android-project/app/.cxx/Debug/295y3y4e/arm64-v8a'
[1/3] Building CXX object src/CMakeFiles/main.dir/project_main.cpp.o
FAILED: src/CMakeFiles/main.dir/project_main.cpp.o 
/run/media/ulisesten/SSD2/Aplicaciones/android-studio-2020.3.1.25-linux/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android21 --gcc-toolchain=/run/media/ulisesten/SSD2/Aplicaciones/android-studio-2020.3.1.25-linux/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/run/media/ulisesten/SSD2/Aplicaciones/android-studio-2020.3.1.25-linux/Sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/linux-x86_64/sysroot  -Dmain_EXPORTS -I/home/ulisesten/Documents/android-project/app/jni/SDL2/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -fPIC -MD -MT src/CMakeFiles/main.dir/project_main.cpp.o -MF src/CMakeFiles/main.dir/project_main.cpp.o.d -o src/CMakeFiles/main.dir/project_main.cpp.o -c /home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:10:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "32 23 3 1",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:11:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "     c #FFFFFF",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:12:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        ".    c #000000",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:13:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "+    c #FFFF00",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:14:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "                                ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:15:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "            ........            ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:16:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "          ..++++++++..          ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:17:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "         .++++++++++++.         ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:18:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "        .++++++++++++++.        ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:19:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "       .++++++++++++++++.       ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:20:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "      .++++++++++++++++++.      ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:21:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "      .+++....++++....+++.      ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:22:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "     .++++.. .++++.. .++++.     ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:23:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "     .++++....++++....++++.     ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:24:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "     .++++++++++++++++++++.     ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:25:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "     .++++++++++++++++++++.     ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:26:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "     .+++++++++..+++++++++.     ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:27:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "     .+++++++++..+++++++++.     ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:28:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "     .++++++++++++++++++++.     ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:29:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "      .++++++++++++++++++.      ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:30:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "      .++...++++++++...++.      ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:31:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "       .++............++.       ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:32:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "        .++..........++.        ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:33:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "         .+++......+++.         ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:34:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "          ..++++++++..          ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:35:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "            ........            ",
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:36:9: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        "                                "};
        ^
/home/ulisesten/Documents/android-project/app/jni/src/project_main.cpp:53:15: error: use of undeclared identifier 'IMG_ReadXPMFromArray'
    surface = IMG_ReadXPMFromArray(icon_xpm);
              ^
27 warnings and 1 error generated.
[2/3] Linking CXX shared library /home/ulisesten/Documents/android-project/app/build/intermediates/cxx/Debug/295y3y4e/obj/arm64-v8a/libSDL2.so
ninja: build stopped: subcommand failed.
